--- a/_layout/sidebar.html
+++ b/_layout/sidebar.html
@@ -7,9 +7,7 @@
   </div>
   <nav class="sidebar-nav">
     <a class="sidebar-nav-item {{ispage index.html}}active{{end}}" href="/">Home</a>
-    <a class="sidebar-nav-item {{ispage menu1/*}}active{{end}}" href="/menu1/">Code blocks</a>
-    <a class="sidebar-nav-item {{ispage menu2/*}}active{{end}}" href="/menu2/">More goodies</a>
-    <a class="sidebar-nav-item {{ispage menu3/*}}active{{end}}" href="/menu3/">Tags</a>
+    <a class="sidebar-nav-item {{ispage kurs/*}}active{{end}}" href="/kurs/">Courses</a>
   </nav>
   <div class="sidebar-item">
     <p>&copy; {{fill author}}.</p>
@@ -22,8 +20,8 @@ content to avoid any CSS collisions with our real content. -->
   <div class="masthead">
     <div class="container">
       <h3 class="masthead-title">
-        <a href="/" title="Home">Lanyon</a>
-        <small>Description of your site</small>
+        <a href="/" title="Home">Geir Arne Hjelle</a>
+        <small>@gahjelle</small>
       </h3>
     </div>
   </div>
